--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         /* Hero Section */
         .hero {
             background: linear-gradient(rgba(10,10,10,0.8), rgba(10,10,10,0.8)), 
-                        url('https://images.unsplash.com/photo-1551524164-6ca88f2930e0?ixlib=rb-4.0.3') center/cover;
+                        url('https://i.imgur.com/jj91sk5.gif') center/cover;
             height: 100vh;
             display: flex;
             align-items: center;
