--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         /* HERO SECTION */
         .hero {
             background: linear-gradient(rgba(10,10,10,0.85), rgba(10,10,10,0.85)), 
-                        url('https://images.unsplash.com/photo-1551524164-6ca88f2930e0?ixlib=rb-4.0.3') center/cover;
+                        url('images/background.jpg') center/cover;
             height: 100vh;
             min-height: 600px;
             display: flex;
@@ -365,6 +365,7 @@
             transition: all 0.3s ease;
             border-radius: 8px;
             height: 100%;
+            text-align: center;
         }
 
         .unit-card:hover {
@@ -384,6 +385,15 @@
         .unit-card p {
             line-height: 1.7;
             color: var(--text-color);
+        }
+
+        .unit-image {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 5px;
+            margin-bottom: 1rem;
+            border: 2px solid var(--primary-color);
         }
 
         /* OPERATIONS SECTION */
@@ -502,6 +512,26 @@
             margin-bottom: 0.8rem;
             text-transform: uppercase;
             font-size: 0.9rem;
+        }
+
+        .operation-image {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 5px;
+            margin-bottom: 1rem;
+        }
+
+        .classified-image {
+            width: 100%;
+            height: 150px;
+            background: #333;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 5px;
+            margin-bottom: 1rem;
+            border: 2px dashed #555;
         }
 
         /* RECRUITMENT SECTION */
@@ -845,7 +875,8 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo-container">
-                    <div class="logo-main">CRAMER GROUP</div>
+                    <!-- Логотип -->
+                    <img src="images/logo.png" alt="CRAMER GROUP" style="height: 50px; margin-bottom: 10px;">
                     <div class="logo-subtitle">PRIVATE MILITARY COMPANY</div>
                 </div>
                 <nav>
@@ -866,6 +897,8 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
+                <!-- Логотип в герое -->
+                <img src="images/logo.png" alt="ЧВК CRAMER" style="height: 100px; margin-bottom: 2rem;">
                 <h1>ЧВК CRAMER</h1>
                 <div class="hero-subtitle">PRIVATE MILITARY COMPANY</div>
                 <p>Элитные частные военные решения. Профессионализм. Дисциплина. Результат.</p>
@@ -924,14 +957,17 @@
             <h2 class="section-title">Наши подразделения</h2>
             <div class="units-grid">
                 <div class="unit-card">
+                    <img src="images/unit-hammers.jpg" alt="Молоты" class="unit-image">
                     <h3>МОЛОТЫ</h3>
                     <p>Штурмовое и антитеррористическое подразделение. Специализация: зачистка помещений, силовой захват объектов, нейтрализация противника в ближнем бою.</p>
                 </div>
                 <div class="unit-card">
+                    <img src="images/unit-shadows.jpg" alt="Тени" class="unit-image">
                     <h3>ТЕНИ</h3>
                     <p>Силы специальных операций. Специализация: разведка, диверсии, точечные ликвидации, операции в глубоком тылу противника.</p>
                 </div>
                 <div class="unit-card">
+                    <img src="images/unit-logistics.jpg" alt="Логистика" class="unit-image">
                     <h3>ЛОГИСТИКА</h3>
                     <p>Подразделение обеспечения. Специализация: снабжение, транспорт, медицинская поддержка, техническое обслуживание.</p>
                 </div>
@@ -950,6 +986,7 @@
             <div class="operations-grid">
                 <!-- Completed Operation -->
                 <div class="operation-card completed">
+                    <img src="images/operation-ice.jpg" alt="Операция Ледяная Тишина" class="operation-image">
                     <span class="status completed">Успешно завершена</span>
                     <span class="status inactive" style="margin-left: 0.5rem;">Неактивна</span>
                     <h3>ЛЕДЯНАЯ ТИШИНА</h3>
@@ -983,6 +1020,9 @@
 
                 <!-- Classified Operations -->
                 <div class="operation-card classified">
+                    <div class="classified-image">
+                        <span style="color: #666; font-size: 2rem;">🔒</span>
+                    </div>
                     <span class="status classified">Засекречено</span>
                     <h3>ОПЕРАЦИЯ #CR-782</h3>
                     <p class="operation-info">
@@ -995,6 +1035,9 @@
                 </div>
 
                 <div class="operation-card classified">
+                    <div class="classified-image">
+                        <span style="color: #666; font-size: 2rem;">🔒</span>
+                    </div>
                     <span class="status classified">Засекречено</span>
                     <h3>ОПЕРАЦИЯ #CR-781</h3>
                     <p class="operation-info">
@@ -1078,7 +1121,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <div class="logo-main" style="font-size: 1.5rem;">CRAMER GROUP</div>
+                    <img src="images/logo.png" alt="CRAMER GROUP" style="height: 40px; margin-bottom: 10px;">
                     <div class="logo-subtitle">PRIVATE MILITARY COMPANY</div>
                 </div>
                 <div class="contact-info">
