--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@
 
         .logo-container {
             display: flex;
+            align-items: center;
+            gap: 1rem;
+        }
+
+        .logo-image {
+            height: 50px;
+        }
+
+        .logo-text {
+            display: flex;
             flex-direction: column;
             align-items: flex-start;
         }
@@ -108,7 +118,7 @@
         /* HERO SECTION */
         .hero {
             background: linear-gradient(rgba(10,10,10,0.85), rgba(10,10,10,0.85)), 
-                        url('images/background.jpg') center/cover;
+                        url('images/background.gif') center/cover;
             height: 100vh;
             min-height: 600px;
             display: flex;
@@ -366,6 +376,38 @@
             border-radius: 8px;
             height: 100%;
             text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .unit-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-size: cover;
+            background-position: center;
+            opacity: 0.4;
+            z-index: 1;
+        }
+
+        .unit-card.hammers::before {
+            background-image: url('images/unit-hammers.jpg');
+        }
+
+        .unit-card.shadows::before {
+            background-image: url('images/unit-shadows.jpg');
+        }
+
+        .unit-card.logistics::before {
+            background-image: url('images/unit-logistics.jpg');
+        }
+
+        .unit-card > * {
+            position: relative;
+            z-index: 2;
         }
 
         .unit-card:hover {
@@ -385,15 +427,6 @@
         .unit-card p {
             line-height: 1.7;
             color: var(--text-color);
-        }
-
-        .unit-image {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            border-radius: 5px;
-            margin-bottom: 1rem;
-            border: 2px solid var(--primary-color);
         }
 
         /* OPERATIONS SECTION */
@@ -724,6 +757,10 @@
             }
 
             .logo-container {
+                justify-content: center;
+            }
+
+            .logo-text {
                 align-items: center;
             }
 
@@ -875,9 +912,13 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo-container">
-                    <!-- Логотип -->
-                    <img src="images/logo.png" alt="CRAMER GROUP" style="height: 50px; margin-bottom: 10px;">
-                    <div class="logo-subtitle">PRIVATE MILITARY COMPANY</div>
+                    <!-- Логотип слева -->
+                    <img src="images/logo.png" alt="CRAMER GROUP" class="logo-image">
+                    <!-- Текст CRAMER зеленым цветом -->
+                    <div class="logo-text">
+                        <div class="logo-main">CRAMER</div>
+                        <div class="logo-subtitle">PRIVATE MILITARY COMPANY</div>
+                    </div>
                 </div>
                 <nav>
                     <ul>
@@ -897,8 +938,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <!-- Логотип в герое -->
-                <img src="images/logo.png" alt="ЧВК CRAMER" style="height: 100px; margin-bottom: 2rem;">
+                <!-- Убрали логотип из героя -->
                 <h1>ЧВК CRAMER</h1>
                 <div class="hero-subtitle">PRIVATE MILITARY COMPANY</div>
                 <p>Элитные частные военные решения. Профессионализм. Дисциплина. Результат.</p>
@@ -956,18 +996,15 @@
         <div class="container">
             <h2 class="section-title">Наши подразделения</h2>
             <div class="units-grid">
-                <div class="unit-card">
-                    <img src="images/unit-hammers.jpg" alt="Молоты" class="unit-image">
+                <div class="unit-card hammers">
                     <h3>МОЛОТЫ</h3>
                     <p>Штурмовое и антитеррористическое подразделение. Специализация: зачистка помещений, силовой захват объектов, нейтрализация противника в ближнем бою.</p>
                 </div>
-                <div class="unit-card">
-                    <img src="images/unit-shadows.jpg" alt="Тени" class="unit-image">
+                <div class="unit-card shadows">
                     <h3>ТЕНИ</h3>
                     <p>Силы специальных операций. Специализация: разведка, диверсии, точечные ликвидации, операции в глубоком тылу противника.</p>
                 </div>
-                <div class="unit-card">
-                    <img src="images/unit-logistics.jpg" alt="Логистика" class="unit-image">
+                <div class="unit-card logistics">
                     <h3>ЛОГИСТИКА</h3>
                     <p>Подразделение обеспечения. Специализация: снабжение, транспорт, медицинская поддержка, техническое обслуживание.</p>
                 </div>
@@ -1141,6 +1178,7 @@
         </div>
     </footer>
 
+    <!-- JavaScript код остается без изменений -->
     <script>
         // 🔐 УПРОЩЕННАЯ И ИСПРАВЛЕННАЯ СИСТЕМА АУТЕНТИФИКАЦИИ
         const CORRECT_PASSWORD = "AwesomeCrimer2025";
@@ -1478,7 +1516,7 @@
 
             submitBtn.innerHTML = originalText;
             submitBtn.disabled = false;
-        });
+        }
 
         // Уведомления
         function showNotification(message, type = 'info') {
