--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         /* HERO SECTION */
         .hero {
             background: linear-gradient(rgba(10,10,10,0.85), rgba(10,10,10,0.85)), 
-                        url('images/background.gif') center/cover;
+                        url('images/background.mp4') center/cover;
             height: 100vh;
             min-height: 600px;
             display: flex;
