--- a/index.html
+++ b/index.html
@@ -1197,7 +1197,7 @@
                 <div class="footer-logo">
                     <!-- Убрали логотип, оставили только текст -->
                     <div class="logo-text">
-                        <div class="logo-main" style="font-size: 1.5rem;">CRAMER GROUP</div>
+                        <div class="logo-main" style="font-size: 1.5rem;">CRAMER</div>
                         <div class="logo-subtitle">PRIVATE MILITARY COMPANY</div>
                     </div>
                 </div>
