--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@
             <div class="header-content">
                 <div class="logo-container">
                     <!-- Логотип слева -->
-                    <img src="images/logo.png" alt="CRAMER GROUP" class="logo-image">
+                    <img src="images/logo.png" alt="CRAMER" class="logo-image">
                     <!-- Текст CRAMER GROUP зеленым цветом -->
                     <div class="logo-text">
                         <div class="logo-main">CRAMER GROUP</div>
@@ -1197,13 +1197,13 @@
                 <div class="footer-logo">
                     <!-- Убрали логотип, оставили только текст -->
                     <div class="logo-text">
-                        <div class="logo-main" style="font-size: 1.5rem;">CRAMER</div>
+                        <div class="logo-main" style="font-size: 1.5rem;">CRAMER GROUP</div>
                         <div class="logo-subtitle">PRIVATE MILITARY COMPANY</div>
                     </div>
                 </div>
                 <div class="contact-info">
-                    <p>Email: contact@cramer-pmc.com</p>
-                    <p>Discord: discord.gg/cramer</p>
+                    <p>Email: cramergrouppmc@gmail.com</p>
+                    <p>Discord: discord.gg/xMxmXjGpHf</p>
                     <p>Только для серьезных запросов</p>
                 </div>
                 <div class="footer-social-links">
@@ -1213,7 +1213,7 @@
                 </div>
             </div>
             <div style="margin-top: 2rem; font-size: 0.9rem; color: #888;">
-                <p>© 2024 ЧВК CRAMER. Все права защищены. Конфиденциально.</p>
+                <p>© 2025 ЧВК CRAMER. Все права защищены. Конфиденциально.</p>
             </div>
         </div>
     </footer>
