--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@
                     <img src="images/logo.png" alt="CRAMER" class="logo-image">
                     <!-- Текст CRAMER GROUP зеленым цветом -->
                     <div class="logo-text">
-                        <div class="logo-main">CRAMER GROUP</div>
+                        <div class="logo-main">CRAMER</div>
                         <div class="logo-subtitle">PRIVATE MILITARY COMPANY</div>
                     </div>
                 </div>
