--- a/index.html
+++ b/index.html
@@ -4,13 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ЧВК CRAMER - Элитные частные военные решения</title>
-    
-    <!-- ИКОНКА ДЛЯ ВКЛАДКИ -->
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-    
+
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%23228B22'/><text x='50' y='70' font-size='60' text-anchor='middle' fill='white'>C</text></svg>">
     <style>
         /* RESET И БАЗОВЫЕ СТИЛИ */
         * {
