--- a/index.html
+++ b/index.html
@@ -1216,6 +1216,7 @@
             </div>
             <div style="margin-top: 2rem; font-size: 0.9rem; color: #888;">
                 <p>© 2025 ЧВК CRAMER. Все права защищены. Конфиденциально.</p>
+                <p>Все на сайте не является настоящим, это сайт фракции по игре в Roblox.</p>
             </div>
         </div>
     </footer>
