--- a/index.html
+++ b/index.html
@@ -1622,6 +1622,7 @@
             </div>
             <div style="margin-top: 2rem; font-size: 0.9rem; color: #888;">
                 <p>© 2025 ЧВК CRAMER. Все права защищены. Конфиденциально.</p>
+                <p>Все на сайте является вымыслом. Речь идет о фракции в игре Roblox.</p>
             </div>
         </div>
     </footer>
