--- a/index.html
+++ b/index.html
@@ -1571,7 +1571,7 @@
                     
                     <div class="form-group">
                         <label for="discordNick">Ник в Discord *</label>
-                        <input type="text" id="discordNick" name="discordNick" required placeholder="username#1234" maxlength="50">
+                        <input type="text" id="discordNick" name="discordNick" required placeholder="Ваш ник в Discord" maxlength="50">
                     </div>
                     
                     <div class="form-group">
@@ -1622,7 +1622,9 @@
             </div>
             <div style="margin-top: 2rem; font-size: 0.9rem; color: #888;">
                 <p>© 2025 ЧВК CRAMER. Все права защищены. Конфиденциально.</p>
-                <p>Все на сайте является вымыслом. Речь идет о фракции в игре Roblox.</p>
+            </div>
+            <div style="margin-top: 2rem; font-size: 0.9rem; color: #888;">
+                <p>Все на сайте является вымыслом. Сайт фракции по BRM5 (Roblox).</p>
             </div>
         </div>
     </footer>
