--- a/index.html
+++ b/index.html
@@ -424,15 +424,15 @@
         }
 
         .unit-card.hammers::before {
-            background-image: url('images/unit-hammers.jpg');
+            background-image: url('images/unit-hammers.png');
         }
 
         .unit-card.shadows::before {
-            background-image: url('images/unit-shadows.jpg');
+            background-image: url('images/unit-shadows.png');
         }
 
         .unit-card.logistics::before {
-            background-image: url('images/unit-logistics.jpg');
+            background-image: url('images/unit-logistics.png');
         }
 
         .unit-card:hover::before {
