--- a/index.html
+++ b/index.html
@@ -1852,32 +1852,32 @@
                     codename: "ICE-SILENCE",
                     status: "completed",
                     priority: "high",
-                    startDate: "2024-01-15",
+                    startDate: "2025-11-25",
                     endDate: "2024-01-18",
-                    location: "Арктика, Северный полюс",
-                    client: "Конфиденциально",
+                    location: "Метеостанция ПОЛЯРИС",
+                    client: "НАТО",
                     reward: 50000,
                     risk: "high",
                     description: "Захват и эвакуация высокопоставленного цели в арктических условиях. Операция требовала специальной подготовки для работы в экстремально низких температурах.",
-                    participants: ["Дэн Крамер (Командир)", "Алексей Воронов (Снайпер)", "Иван Молотов (Штурмовик)", "Михаил Тень (Разведчик)"],
-                    result: "Цель успешно эвакуирована. Потерь среди оперативников нет. Задание выполнено за 72 часа.",
+                    participants: ["СПИСОК УЧАСТНИКОВ ЗАСЕКРЕЧЕН"],
+                    result: "Цель успешно эвакуирована. Потерь среди оперативников нет. Задание выполнено за 3 часа.",
                     imageUrl: "https://images.unsplash.com/photo-1542751371-adc38448a05e?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80",
                     videoUrl: "",
                     dateAdded: new Date().toISOString()
                 },
                 {
                     id: 2,
-                    name: "Пустынный Шторм",
-                    codename: "DESERT-STORM",
-                    status: "active",
-                    priority: "critical",
-                    startDate: "2024-02-01",
-                    location: "Ближний Восток",
-                    client: "Частный заказчик",
-                    reward: 75000,
+                    name: "Потерянные",
+                    codename: "LOSTED",
+                    status: "completed",
+                    priority: "high",
+                    startDate: "2025-11-28",
+                    location: "Округ Ронограда",
+                    client: "Союз Археологических Организаций Ронограда (САОР)",
+                    reward: 15000,
                     risk: "extreme",
-                    description: "Защита нефтяной платформы от нападения боевиков. Операция включает оборону объекта и нейтрализацию угрозы.",
-                    participants: ["Сергей Ястреб (Командир)", "Олег Сокол (Спецназ)", "Дмитрий Беркут (Поддержка)"],
+                    description: "Поиск и эвакуация древних реликвий острова.",
+                    participants: ["СПИСОК УЧАСТНИКОВ ЗАСЕКРЕЧЕН"],
                     result: "",
                     imageUrl: "https://images.unsplash.com/photo-1523240795612-9a054b0db644?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80",
                     videoUrl: "",
