--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
         }
 
         .unit-card.logistics::before {
-            background-image: url('images/unit-logistics.png');
+            background-image: url('images/unit-logi.png');
         }
 
         .unit-card:hover::before {
