--- a/index.html
+++ b/index.html
@@ -1323,15 +1323,15 @@
             <h2 class="section-title">Наши подразделения</h2>
             <div class="units-grid">
                 <div class="unit-card hammers">
-                    <h3>МОЛОТЫ</h3>
+                    <h3>ОШГ "ХОРС"</h3>
                     <p>Штурмовое и антитеррористическое подразделение. Специализация: зачистка помещений, силовой захват объектов, нейтрализация противника в ближнем бою.</p>
                 </div>
                 <div class="unit-card shadows">
-                    <h3>ТЕНИ</h3>
+                    <h3>СТГ "СЕМАРГЛ"</h3>
                     <p>Силы специальных операций. Специализация: разведка, диверсии, точечные ликвидации, операции в глубоком тылу противника.</p>
                 </div>
                 <div class="unit-card logistics">
-                    <h3>ЛОГИСТИКА</h3>
+                    <h3>ЛЭО "РАРОГ"</h3>
                     <p>Подразделение обеспечения. Специализация: снабжение, транспорт, медицинская поддержка, техническое обслуживание.</p>
                 </div>
             </div>
@@ -1569,8 +1569,8 @@
                         <label for="unit">Предпочтительное подразделение *</label>
                         <select id="unit" name="unit" required>
                             <option value="">Выберите подразделение</option>
-                            <option value="hammers">Молоты (Штурм)</option>
-                            <option value="logistics">Логистика (Обеспечение)</option>
+                            <option value="hammers">ХОРС (Штурм)</option>
+                            <option value="logistics">РАРОГ (Обеспечение)</option>
                         </select>
                     </div>
                     
@@ -2622,9 +2622,9 @@
         // Вспомогательные функции для заявок
         function getUnitText(unit) {
             const units = {
-                'hammers': '🔨 Молоты (Штурм)',
-                'shadows': '👻 Тени (Спецназ)',
-                'logistics': '🚚 Логистика (Обеспечение)'
+                'hammers': '🔨 ХОРС (Штурм)',
+                'shadows': '👻 СЕМАРГЛ (Спецназ)',
+                'logistics': '🚚 РАРОГ (Обеспечение)'
             };
             return units[unit] || unit;
         }
